src/objects/RM_Composition__c.object
<CustomObject>
    <fields>
        <fullName>CAS_Description__c</fullName>
        <formula>RegID__r.CAS_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAS Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAS__c</fullName>
        <formula>RegID__r.CAS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Raw_Material__c</fullName>
        <label>Raw Material</label>
        <referenceTo>RawMaterial__c</referenceTo>
        <relationshipLabel>RM Composition</relationshipLabel>
        <relationshipName>RM_Composition</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RegID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reg. Inventory ID</label>
        <referenceTo>Reg_Inventory__c</referenceTo>
        <relationshipLabel>RM Composition</relationshipLabel>
        <relationshipName>RM_Composition</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RM Composition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RMC-{0000000000}</displayFormat>
        <label>RM Composition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RM Composition</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>